# isaacsim_orchard

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  package.xml
config/: isaac_sim_settings.yaml  joint_names_rover_urdf.yaml  unstructured_orchard.yaml
dockerfiles/: Dockerfile  README.md  docker-compose.yml
launch/: display.launch  gazebo.launch
orchard_standalone_scripts/: config.yaml
orchard_standalone_scripts/assets/urdf/: rover.urdf
orchard_standalone_scripts/assets/urdf/meshes/collision/: base_link.stl  l_bogie_link.stl  l_roll_static_link.stl  l_wheel_link.stl  l_wheel_rotate_link.stl  ouster_os0.stl  r_bogie_link.stl  r_roll_static_link.stl  r_wheel_link.stl  r_wheel_rotate_link.stl  roll_balance_link.stl
orchard_standalone_scripts/assets/urdf/meshes/visual/: arm1_link.dae  arm2_link.dae  arm3_link.dae  arm4_link.dae  arm5_link.dae  arm6_link.dae  base_link.dae  l_bogie_link.dae  l_roll_static_link.dae  l_wheel_link.dae  l_wheel_rotate_link.dae  ouster_os0.dae  r_bogie_link.dae  r_roll_static_link.dae  r_wheel_link.dae  r_wheel_rotate_link.dae  roll_balance_link.dae
orchard_standalone_scripts/assets/usd/orchard/: Tree1.usdc  Tree2.usdc  orchard_1.usda  orchard_2.usda  orchard_3.usda
orchard_standalone_scripts/assets/usd/rover/: rover.usd
scripts/: compose_robot_map.py  option_parser.py  setup_camera.py  setup_lidar.py  setup_utils.py  spawn_entity.py  spawn_robot.py  start_sim.py  terrian_generator.py  tree_world.py
urdf/: rover.urdf  rover_resources.csv
